added status to producto